--- a/logstyle.css
+++ b/logstyle.css
@@ -76,3 +76,17 @@ label{
     color: black;
 }
 
+
+
+@media only screen and (max-width: 700px) {
+
+    .back{
+        width: 100%;
+        height: auto;
+    }
+    .forms{
+        width: 100%;
+        position: absolute;
+        height: 100%;
+    }
+}
