--- a/logstyle.css
+++ b/logstyle.css
@@ -90,3 +90,51 @@ label{
         height: 100%;
     }
 }
+
+
+
+
+/* for  logout */
+
+
+.logout{
+    background-image: url('https://img.freepik.com/premium-photo/epic-gaming-background-wallpaper-with-futuristic-cyberpunk-game-controller_974629-16127.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 650px;
+    display: flex;
+    margin: 0px !important;
+    padding: 0px !important;
+    align-items: center;
+    justify-content: center;
+}
+.logout div{
+    width: 40%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 30px;
+    align-items: center;
+    
+    background: rgba( 255, 255, 255, 0.5 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 14.5px );
+    -webkit-backdrop-filter: blur( 14.5px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+.logout div button{
+    width: 70%;
+    height: 50px;
+    border-radius: 5px;
+    border: 1px solid red;
+    transition: 0.5s ease;
+}
+.logout div button:hover{
+    background-color: red;
+    color: white;
+    border: 1px solid white;
+}
+
