--- a/logstyle.css
+++ b/logstyle.css
@@ -89,6 +89,10 @@ label{
         position: absolute;
         height: 100%;
     }
+     .logout div{
+        background-color: white;
+        width: 100% !important;
+    }
 }
 
 
