--- a/style.css
+++ b/style.css
@@ -341,6 +341,9 @@ footer{
     .closebtn{
         display: none;
     }
+    .closebtn2{
+        display: block;
+    }
     .cartA{
         width: 100%;
         height: 70%;
